Fixed video and code overflowing

--- a/app/globals.css
+++ b/app/globals.css
@@ -80,3 +80,29 @@ h6 {
   font-family: monospace;
   font-size: 1.5vh;
 }
+
+/*center container for videos*/
+.centerVideo {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  position: relative;
+  padding-top: 56.25%;
+  overflow: hidden;
+}
+
+/* for videos */
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+code {
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
+  font-family: monospace; 
+}
